coneudo-secundario atualizado.

--- a/landing.html
+++ b/landing.html
@@ -33,7 +33,7 @@
 
     <section class="conteudo-secundario">
       <h2>O que encontrarei aqui?</h2>
-      <p>1. Guia de regras oficiais para um bom desempenho do jogo.</p>
+      <p>1. Guia de regras  para um bom desempenho do jogo.</p>
       <p>2. Guia de classes, magias, talentos e equipamentos.</p>
       <p>3. Fichas editáveis, grids de batalha e muito mais.</p>
     </section>
