--- a/landing.html
+++ b/landing.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <Header class="cabecalho">
-    <img class="logo" src="imagens/logo-png.png" alt="DnD Project">
+    <a href="#"><img class="logo" src="imagens/logo-png.png" alt="DnD Project"></a>
       <nav class="midia-social">
         <a class="ancora-midias" href="#"><img class="icons" src="imagens/face.png" alt="facebook"></a>
         <a class="ancora-midias" href="#"><img class="icons" src="imagens/insta.png" alt="Instagram"></a>
