--- a/landing.html
+++ b/landing.html
@@ -33,9 +33,9 @@
 
     <section class="conteudo-secundario">
       <h2>O que encontrarei aqui?</h2>
-      <p>1. Guia de regras  para um bom desempenho do jogo.</p>
-      <p>2. Guia de classes, magias, talentos e equipamentos.</p>
-      <p>3. Fichas editáveis, grids de batalha e muito mais.</p>
+      <p>1. Guia de <strong>regras</strong>  para um bom desempenho do jogo.</p>
+      <p>2. Guia de <strong>classes</strong>, <strong>magias</strong>, <strong>talentos</strong> e <strong>equipamentos</strong>.</p>
+      <p>3. <strong>Fichas editáveis</strong>, <strong>grids de batalha</strong> e muito mais.</p>
     </section>
 
   </main>
