--- a/landing.html
+++ b/landing.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="O guia definitivo para sua mesa de DnD">
   <link rel="stylesheet" href="estilo/style.css">
+  <link rel="stylesheet" href="estilo/mediaquery.css">
   <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
   <title>DnD Project</title>
 </head>
@@ -13,22 +14,26 @@
   <Header class="cabecalho">
     <a href="#"><img class="logo" src="imagens/logo-png.png" alt="DnD Project"></a>
       <nav class="midia-social">
-        <a class="ancora-midias" href="#"><img class="icons" src="imagens/face.png" alt="facebook"></a>
-        <a class="ancora-midias" href="#"><img class="icons" src="imagens/insta.png" alt="Instagram"></a>
-        <a class="ancora-midias" href="#"><img class="icons" src="imagens/twitter.png" alt="Twitter"></a>
-        <a class="ancora-midias" href="#"><img class="icons" src="imagens/discord.png" alt="Discord"></a>
+        <a class="ancora-midias" href="#"><img class="icons" src="imagens/face.png" alt="facebook"><div class="midia-name">Facebook</div></a>
+        <a class="ancora-midias" href="#"><img class="icons" src="imagens/insta.png" alt="Instagram"><div class="midia-name">Instagram</div></a>
+        <a class="ancora-midias" href="#"><img class="icons" src="imagens/twitter.png" alt="Twitter"><div class="midia-name">Twitter</div></a>
+        <a class="ancora-midias" href="#"><img class="icons" src="imagens/discord.png" alt="Discord"><div class="midia-name">Discord</div></a>
      </nav>
 
   </Header>
 
   <main class="conteudo">
     <section class="conteudo-central">
-      <div class="conteudo-central-escrito">
-        <h1>D&D Project</h1>
-          <p>O guia completo de suas aventuras!</p>
-      </div>
+        <div class="left">
+          <div class="conteudo-central-escrito">
+            <h1>D&D Project</h1>
+              <p>O guia completo de suas aventuras!</p>
+          </div>
+          <a class="botao2" href="#">Aventure-se</a>
+        </div>
       <img class="conteudo-central-img" src="imagens/5b4f68cf5fe9f61a391ceba87cd3922c-jogue-os-dados-7.png" alt="Dados">
-      <button class="botao">Aventure-se</button>
+      <a class="botao1" href="#">Aventure-se</a>
+      
     </section>
 
     <section class="conteudo-secundario">
